# Repo_whynot

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
app/: config.py  logging.py  main.py
app/api/: routes_health.py  routes_index.py  routes_query.py
app/cli/: main.py
app/github/: ingest.py
app/graph/: builder.py  state.py
app/graph/nodes/: action_gate.py  evidence_grader.py  evidence_merge.py  intent_router.py  query_rewrite.py  retrieve.py  synthesize.py  tool_loop.py  tool_planner.py
app/rag/: chunkers.py  indexer.py  loaders.py  retrievers.py  types.py
app/schemas/: common.py  planning.py  prior_decision.py  repo_answer.py  triage.py
app/services/: approvals.py  cost_tracker.py  model_router.py  prior_decision_investigator.py  prior_decisions.py
app/tools/: read_only.py  validation.py
data/fixtures/sample_repo/: README.md  commits.jsonl  issues.jsonl  prs.jsonl
data/fixtures/sample_repo/docs/: authentication.md  contributing.md
data/samples/: issue_auth_bug.md
docs/: api.md  architecture.md  demo.md
evals/: metrics.py  run_eval.py
evals/cases/: cases.jsonl
evals/why_not/: cases.jsonl  compare_search.py  run_eval.py
scripts/: build_index.py  compare_direct_vs_repoops.py  inspect_v02.py  run_why_not_batch.py  seed_demo_data.py
tests/: conftest.py
tests/integration/: test_api.py  test_flows.py
tests/smoke/: test_cli.py
tests/unit/: test_chunking.py  test_prior_decision_investigator.py  test_prior_decisions.py  test_retrieval.py  test_schemas.py  test_tools.py  test_v02_planning.py
(+2 files in other folders)
