[project]
name = "repo-whynot"
version = "0.3.0"
description = "Small read-only tool for finding prior maintainer decisions in GitHub issues."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "openai>=2.0",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "typer>=0.12",
  "uvicorn>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.scripts]
repoops = "app.cli.main:app"

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "mypy>=1.8",
  "pytest>=8.0",
  "ruff>=0.4",
]

[dependency-groups]
dev = [
  "httpx>=0.27",
  "mypy>=1.8",
  "pytest>=8.0",
  "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false

[tool.setuptools.packages.find]
include = ["app*"]
